--- a/flask_app/templates/habitats.html
+++ b/flask_app/templates/habitats.html
@@ -17,8 +17,22 @@
     </div>
     <main class="container_with_sidebar">
         <div class="sidebar">
-
+            <div class="habitat_item">
+                <img class="habitat_icon" src="static/images/checkmark.png">
+                <div class="habitat_details">
+                    <h3>Classical Guitar</h3>
+                    <p>Practice guitar for 30 minutes</p>
+                </div>
+            </div>
+            <div class="habitat_item">
+                <img class="habitat_icon" src="static/images/checkmark.png">
+                <div class="habitat_details">
+                    <h3>Book Club</h3>
+                    <p>Read one chapter</p>
+                </div>
+            </div>
         </div>
+
         <div class="habitat_view centered">
             <p>No habitat is currently selected</p>
         </div>
