--- a/flask_app/templates/habitats.html
+++ b/flask_app/templates/habitats.html
@@ -17,7 +17,7 @@
     </div>
     <main class="container_with_sidebar">
         <div class="sidebar">
-            <div class="habitat_item">
+            <div class="habitat_item selected_habitat">
                 <img class="habitat_icon" src="static/images/checkmark.png">
                 <div class="habitat_details">
                     <h3>Classical Guitar</h3>
