--- a/flask_app/templates/habitats.html
+++ b/flask_app/templates/habitats.html
@@ -7,6 +7,24 @@
     <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='styles.css') }}">
 </head>
 <body>
+
+    <button class="open-button" onclick="openForm()">Create Habit</button>
+
+    div class="form-popup" id="myForm">
+            <form method="POST" action="/habitats" class="form-container" enctype="multipart/form-data">
+                <h1>Create Habitat</h1>
+
+                {{form.title.label}} {{form.title}}
+                {{form.description.label}} {{form.description}}
+                {{form.icon_image.label}}
+                {{form.icon_image}}
+
+                <button type="submit" class="btn">Create Habitat</button>
+
+                <button type="button" class="btn cancel" onclick="closeForm()">Close</button>
+            </form>
+        </div>
+    
     <div class="navbar">
         <a href="{{url_for('home')}}">Home</a>
         <a href="{{url_for('createhabits')}}">My Habits</a>
@@ -37,6 +55,14 @@
             <p>No habitat is currently selected</p>
         </div>
     </main>
-    
+    <script>
+        function openForm() {
+            document.getElementById("myForm").style.display = "block";
+        }
+
+        function closeForm() {
+            document.getElementById("myForm").style.display = "none";
+        }
+    </script>
 </body>
 </html>
