--- a/flask_app/Static/styles.css
+++ b/flask_app/Static/styles.css
@@ -429,8 +429,8 @@ button {
 }
 
 .habitat_icon {
-    max-width: 50px;
-    max-height: 50px;
+    width: 50px;
+    height: 50px;
     margin: 10px;
 
     object-fit: cover;
