--- a/flask_app/templates/habitats.html
+++ b/flask_app/templates/habitats.html
@@ -37,7 +37,7 @@
 
             {% for habitat in habitats %}
             <a class="habitat_item" href="{{url_for('createhabits')}}">
-                <img class="habitat_icon" src="{{ url_for('static', filename=habitat.icon_image) }}">
+                <img class="habitat_icon" src="{{ url_for('static', filename='images/user_uploads/' + habitat.icon_image) }}">
                 <div class="habitat_details">
                     <h3>{{ habitat.title }}</h3>
                     <p>Corresponding Habit</p>
