--- a/flask_app/templates/habitats.html
+++ b/flask_app/templates/habitats.html
@@ -36,7 +36,7 @@
             <button class="open-button" onclick="openForm()">Create Habitat</button>
 
             {% for habitat in habitats %}
-            <a class="habitat_item" href="{{url_for('createhabits')}}">
+            <a class="habitat_item" href="" onclick="selectHabitat(this)">
                 <img class="habitat_icon" src="{{ url_for('static', filename='images/user_uploads/' + habitat.icon_image) }}">
                 <div class="habitat_details">
                     <h3>{{ habitat.title }}</h3>
@@ -68,6 +68,21 @@
         </div>
     </main>
     <script>
+        function selectHabitat(element) {
+            
+            // Prevent the default behavior of the anchor tag
+            event.preventDefault();     
+
+            // Remove the 'selected_habitat' class from all elements with the same class
+            var habitatItems = document.querySelectorAll('.habitat_item');
+            habitatItems.forEach(function(item) {
+                item.classList.remove('selected_habitat');
+            });
+
+            // Add the 'selected_habitat' class to the clicked element
+            element.classList.add('selected_habitat');
+        }
+
         function openForm() {
             document.getElementById("myForm").style.display = "block";
         }
@@ -78,3 +93,4 @@
     </script>
 </body>
 </html>
+
