fix css for displaying habitats

--- a/flask_app/templates/habitats.html
+++ b/flask_app/templates/habitats.html
@@ -37,9 +37,10 @@
 
             {% for habitat in habitats %}
 
-            <div class="habitat_item" onclick="showHabitatDetails('{{ habitat.id }}')">
-                <img class="habitat_icon" src="{{ url_for('static', filename=habitat.icon_image) }}">
-            <a class="habitat_item" href="" onclick="selectHabitat(this)">
+
+            <!-- <div class="habitat_item" onclick="showHabitatDetails('{{ habitat.id }}')">
+                <img class="habitat_icon" src="{{ url_for('static', filename=habitat.icon_image) }}"> -->
+            <a class="habitat_item" href="" onclick="selectHabitat(this, '{{habitat.id}}')">
                 <img class="habitat_icon" src="{{ url_for('static', filename='images/user_uploads/' + habitat.icon_image) }}">
                 <div class="habitat_details">
                     <h3>{{ habitat.title }}</h3>
@@ -71,11 +72,11 @@
         </div>
     </main>
     <script>
-        function selectHabitat(element) {
+        function selectHabitat(element, habitatId) {
             
             // Prevent the default behavior of the anchor tag
             event.preventDefault();     
-
+            console.log(habitatId)
             // Remove the 'selected_habitat' class from all elements with the same class
             var habitatItems = document.querySelectorAll('.habitat_item');
             habitatItems.forEach(function(item) {
@@ -84,6 +85,7 @@
 
             // Add the 'selected_habitat' class to the clicked element
             element.classList.add('selected_habitat');
+            showHabitatDetails(habitatId);
         }
 
         function openForm() {
