--- a/flask_app/templates/habitats.html
+++ b/flask_app/templates/habitats.html
@@ -24,7 +24,7 @@
     </div>
     
     <div class="navbar">
-        <a href="{{url_for('home')}}">Home</a>
+        <a href="{{url_for('home1')}}">Home</a>
         <a href="{{url_for('createhabits')}}">My Habits</a>
         <h1>Habit Hero</h1>
         <a href="{{url_for('habitats')}}">Habitats</a>
