--- a/flask_app/templates/habits.html
+++ b/flask_app/templates/habits.html
@@ -10,7 +10,7 @@
 
 <body>
         <div class="navbar">
-            <a href="{{url_for('home')}}">Home</a>
+            <a href="{{url_for('home1')}}">Home</a>
             <a href="{{url_for('createhabits')}}">My Habits</a>
             <h1>Habit Hero</h1>
             <a href="{{url_for('habitats')}}">Habitats</a>
