--- a/flask_app/templates/layout.html
+++ b/flask_app/templates/layout.html
@@ -8,13 +8,16 @@
 
     <body>
         <div class="navbar">
-            <a href="{{url_for('home')}}">Home</a>
-            <a href="{{url_for('aboutUs')}}">About Us</a>
-            <h1>Habit Hero</h1>
+    
             {% if user %}
+                <a href="{{url_for('home1')}}">Home</a>
+                <h1>Habit Hero</h1>
                 <a href="{{url_for('habitats')}}">Habitats</a>
                 <a href="{{url_for('logout')}}">Logout</a>
             {% else %}
+                <a href="{{url_for('home')}}">Home</a>
+                <a href="{{url_for('aboutUs')}}">About Us</a>
+                <h1>Habit Hero</h1>
                 <a href="{{url_for('login')}}">Login</a>
                 <a href="{{url_for('register')}}">Register</a>
             {% endif %}
