--- a/flask_app/templates/habits.html
+++ b/flask_app/templates/habits.html
@@ -176,9 +176,19 @@
         }
 
         function markAsDone(habitId) {
-            fetch(`/habits/${habitId}/update`, { method: 'POST' })
-                    .then(() => location.reload())
+            const lastDoneKey = `lastDone_${habitId}`;
+            const lastDone = localStorage.getItem(lastDoneKey);
+            const today = new Date().toISOString().split('T')[0]; 
+            if (lastDone !== today) {
+                fetch(`/habits/${habitId}/update`, { method: 'POST' })
+                    .then(() => {
+                        localStorage.setItem(lastDoneKey, today);
+                        location.reload();
+                    })
                     .catch(error => console.error('Error:', error));
+            } else {
+                alert("You've already completed this habit for today!");
+            }
         }
 
         function closeEdit() {
