Pushing Xander's Chatroom Code

--- a/flask_app/templates/habitats.html
+++ b/flask_app/templates/habitats.html
@@ -66,7 +66,7 @@
         </div>
 
         <div class="habitat_view centered">
-            <p>No habitat is currently selected</p>
+            <p><a href="{{url_for('chat')}}"><button>Navigate to Habitat Chat</button></a></p>
         </div>
     </main>
     <script>
