--- a/flask_app/templates/chat.html
+++ b/flask_app/templates/chat.html
@@ -12,15 +12,15 @@
 <body>
 
     <div class="chathome">
-        <h1 class="mychat">My Chat App </h1>
+        <h1 class="mychat">Habitat Chat</h1>
         <form action="/chatroom">
             <div>
-                <label class="bi bi-person">Enter your username:</label>
+                <label class="bi bi-person">Enter your Name:</label>
                 <input type="text" name="username">
             </div>
             <div>
-                <label class="bi bi-person-bounding-box">Enter your room id:</label>
-                <input type="text" name="room">
+                <label class="bi bi-person-bounding-box">Enter your Habitat Name:</label>
+                <input  autocomplete="off" action="/action_page.php" class="autocomplete" id="myInput" type="text" name="room">
             </div>
             <button type="submit">Submit</button>
         </form>
