--- a/flask_app/templates/chatroom.html
+++ b/flask_app/templates/chatroom.html
@@ -9,9 +9,16 @@
     <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='styles.css') }}">
 </head>
 <body>
-
+    <div class="navbar">
+        <a href="{{url_for('home1')}}">Home</a>
+        <a href="{{url_for('createhabits')}}">My Habits</a>
+        <h1>Habit Hero</h1>
+        <a href="{{url_for('habitats')}}">Habitats</a>
+        <a href="{{url_for('logout')}}">Logout</a>
+        <img id="profilePicture" alt="profile picture" src="static/images/profile_default.jpeg">
+    </div>
     <div class="chatroom container">
-        <h1 class="mychat">Welcome to Chat room {{room}}</h1>
+        <h1 class="mychat">Welcome to Chat Room {{room}}</h1>
         <div id="messages">
 
         </div>
