--- a/flask_app/Static/styles.css
+++ b/flask_app/Static/styles.css
@@ -523,6 +523,40 @@ button {
     width: 30px;
 }
 
+.habitat-details {
+    text-align: center; 
+}
+
+.habitat-details h2 {
+    font-size: 24px; 
+    color: #333; 
+    margin-bottom: 10px; 
+}
+
+.habitat-details .habitat-image {
+    max-width: 100%; 
+    border-radius: 10px; 
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1); 
+    margin-bottom: 20px; 
+}
+
+.members-list p {
+    margin-bottom: 8px; 
+}
+.habitat_view img {
+    width: 100px;
+    height: 100px;
+    border-radius: 50%; 
+    object-fit: cover; 
+    margin-bottom: 10px; 
+}
+.habitat_view .flame-icon {
+    width: 20px; 
+    height: 20px; 
+    margin-right: 5px; 
+    vertical-align: middle;
+}
+
 /* .sent {
     background-color: #007bff; 
     color: white;
