--- a/flask_app/templates/habits.html
+++ b/flask_app/templates/habits.html
@@ -15,7 +15,9 @@
             <h1>Habit Hero</h1>
             <a href="{{url_for('habitats')}}">Habitats</a>
             <a href="{{url_for('logout')}}">Logout</a>
-            <img id="profilePicture" alt="profile picture" src="static/images/profile_default.jpeg">
+            <a href="{{url_for('profile')}}">
+                <img id="profilePicture" alt="profile picture" src="static/images/profile_default.jpeg">
+            </a>
         </div>
     <main>
 
