--- a/flask_app/templates/layout.html
+++ b/flask_app/templates/layout.html
@@ -14,6 +14,9 @@
                 <h1>Habit Hero</h1>
                 <a href="{{url_for('habitats')}}">Habitats</a>
                 <a href="{{url_for('logout')}}">Logout</a>
+                <a href="{{url_for('profile')}}">
+                    <img id="profilePicture" alt="profile picture" src="static/images/profile_default.jpeg">
+                </a>
             {% else %}
                 <a href="{{url_for('home')}}">Home</a>
                 <a href="{{url_for('aboutUs')}}">About Us</a>
